--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "object-assign": "~4.0.1",
     "sequelize": "~3.20.0",
     "socket.io": "~1.4.5",
-    "sqlite3": "^3.1.3"
+    "sqlite3": "^3.1.3",
+    "cleverbot-node": "~0.2.1"
   }
 }
